--- a/default.css
+++ b/default.css
@@ -1,11 +1,11 @@
     body { background: lightblue; }
-    body, input { margin: auto; font-family: Georgia, serif; font-size: 30px; text-align: center; }
+    body, input { margin: auto; font-family: Georgia, serif; font-size: 28px; text-align: center; }
     input { text-align: center; border: inset 1px; }
     form { background: lightblue; border: 6px solid darkblue; margin-top: 1.5em; padding: 10px; border-radius: 16px; -moz-border-radius: 16px; }
     label { display: block; margin-bottom: .5em; }
-    h1 { text-align: center; }
+    h1 { text-align: center; font-size: 50px; }
     h2, h3 { color: lightblue; text-align: center; margin-top: 1.5em; }
-    ol > li { font-size: 1.25em; }
+    ol > li { font-size: 1em; }
     li { margin-top: 1em; }
     div#main { width: 800px; margin: 0 auto; padding: 10px 125px 25px 125px; 
     background: white; border-left: 2px solid #444; border-right: 2px solid #444; }
