--- a/default.css
+++ b/default.css
@@ -7,8 +7,8 @@
     h2, h3 { color: lightblue; text-align: center; margin-top: 1.5em; }
     ol > li { font-size: 1em; }
     li { margin-top: 1em; }
-    div#main { width: 800px; margin: 0 auto; padding: 10px 125px 25px 125px; 
-    background: white; border-left: 2px solid #444; border-right: 2px solid #444; }
+    div#main { width: 800px; margin: 0 auto; padding: 10px 125px 25px 125px; background: white; border-left: 2px solid #444; border-right: 2px solid #444; }
+    div#main { display: none; }
     
     .btn {
     -moz-box-shadow: 0px 1px 0px 0px #fff6af;
